feat(client): setting up JSPM and React

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,15 @@
+<!doctype html>
 <html>
   <head>
     <title>Twitter Stream and Aggregation</title>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <div id="app"></div>
+    <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
+    <script>
+      System.import('lib/main.js');
+    </script>
   </body>
 </html>
+  
