feat(ui): adding base ui components and css

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Twitter Stream and Aggregation</title>
+    <link rel="stylesheet" href="./css/bootstrap-slate.min.css" />
+    <link rel="stylesheet" href="./css/custom.css" />
   </head>
   <body>
     <div id="app"></div>
