--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Twitter Stream and Aggregation</title>
     <link rel="stylesheet" href="./css/bootstrap-slate.min.css" />
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
     <link rel="stylesheet" href="./css/custom.css" />
   </head>
   <body>
