--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="lib/socket.io-client.min.js"></script>
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-      System.import('lib/main.js');
-    </script>
+    <script src="bundle.js"></script>
   </body>
 </html>
   
